--- a/categoria2.html
+++ b/categoria2.html
@@ -23,7 +23,7 @@
         <nav class="navbar navbar-expand-sm  navbar-dark bg-dark">
             <div class="container">
              
-                <a href="cprof.html" class="navbar-brand">
+                <a href="index.html" class="navbar-brand">
                     <img src="imagens/cp.png" width="230">
                     <h1 class="bg-dark">PROFISSIONAIS DA CIDADE</h1>
                 </a>
