--- a/categoria1.html
+++ b/categoria1.html
@@ -54,8 +54,8 @@
              <div class="row">
                      <ul>
                          <li>MOISES ANDRADE - TEL: 75 99808-9452</li>
-                         <li> 
-                            ELIELSON MENEZES - TEL: 75 99838-8878</li>
+                         <li>ELIELSON MENEZES - TEL: 75 99838-8878</li>
+                         <li>JOSE ALEANDRO (SORISSO) - TEL: 75 99980-1651/li>
                      </ul>
             </div>
              
