--- a/categoria2.html
+++ b/categoria2.html
@@ -53,7 +53,11 @@
                 <H3>PINTORES</H3>
              <div class="row">
                      <ul>
-                         <li>---</li>
+                         <li>JOSE EDIMARCIO (MARCIO) - TEL: 75 99820-7828</li>
+                         <li>JOSE BISPO  - TEL: 75 99820-7828</li>
+                         <li>JOAO MARCOS - TEL: 75 99935-5263</li>
+                         <li>GECIONE DE JESUS (Geci) - TEL: 75 99814-2393</li>
+                         <li>ROBERTO BEZERRA  - TEL: 75 99939-8759</li>
                     
                      </ul>
             </div>
