--- a/categoria4.html
+++ b/categoria4.html
@@ -53,7 +53,7 @@
                 <H3>ENCANADORES</H3>
              <div class="row">
                      <ul>
-                         <li>---</li>
+                         <li>WAGNER REIS (SAFADINHO) - TEL: 75 99838-8263</li>
                     
                      </ul>
             </div>
