--- a/categoria3.html
+++ b/categoria3.html
@@ -57,6 +57,10 @@
                          <li> NARCISO - TEL: 75 99890-1838</li>
                          <li>RAIMUNDO ( Zome ) - TEL: 75 99916-2104</li>
                          <li>DANIEL LOURENÇO  - TEL: 75 99818-3678</li>
+                         <li>HENRIQUE   - TEL: 75 998022978</li>
+                         <li>CORNELIO ALMEIDA (MELO)  - TEL: 75 99990-9582</li>
+                         <li>ANDRE REIS  - TEL: 75 99847-6853</li>
+                         <li>COSMEDE JESUS - TEL: 75 99949-6997</li>
                      </ul>
             </div>
              
